Initial Commit: Code structure transformed to OOP.
This is the code for the analysis of microtubules and kinetochores in
fission yeast S pombe 3D fluorescent image data.
Current State of code:
Lines supported for microtubules
Spots NOT supported for kinetochores
Curves NOT supported for curved microtubules
Local server supported
Remote server NOT supported
On-the-go graphics supported
Post-run graphics NOT supported (for remote server)
Feature tracking NOT supported

Expect more commits in the days to follow - SA

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # ignore these files
-Results
-PaperFigures
-PaperMeth
-tempSave.mat
-config_file.m
+/Results/*
+/PaperFigures/*
+/PaperMeth/*
+/tempVars/*
+/makeSettings.m
