Added Interphase Curve Estimation and Fitting capability. Moved fit properties and graphics to be hard coded into Cell.m instead of distributed across the basic elements.

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 /Results/*
 /PaperFigures/*
 /PaperMeth/*
-/tempVars/*
+/Tests/*
 /makeSettings.m
 /init*
 /simul_single_cell_*
 /.DS_Store
-/cut7dist.mat
-/test*
