added initAnalysisParams.m file to all param folders

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@
 /validation/*
 /initCellInfo.m
 /initConfiguration.m
+/initAnalysisParams.m
 /simul_single_cell_*
 /.DS_Store
+*/.DS_Store
+*/*/.DS_Store
